# Difix3D

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt  run.sh
examples/gsplat/: simple_trainer_difix3d.py  utils.py
examples/gsplat/datasets/: colmap.py
examples/nerfstudio/difix3d/: difix3d.py  difix3d_config.py  difix3d_datamanager.py  difix3d_field.py  difix3d_pipeline.py  difix3d_trainer.py
src/: dataset.py  train_difix.py
src/difix3d/: pipeline_difix.py
src/difix3d/data/: dataset.py
src/difix3d/models/: difix.py  mv_unet.py
src/difix3d/scripts/: inference.py  train.py
src/difix3d/utils/: loss.py
